# scicomp-assignment-3

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: contributions.yml  ruff.yml  test.yml
reports/: effort_distribution.typ
scripts/: animate_oscillator.py  create_wave_animation.py  measure_relative_error_sparse_eigenvalues.py  measure_sparse_dense_eig_runtime.py  plot_1d_spring.py  plot_1d_spring_energy.py  plot_eigenfrequency_spectrums.py  plot_eigenfrequency_spectrums_by_length.py  plot_eigenfrequency_spectrums_by_n.py  plot_eigenmodes.py  test_plot.py
src/scicomp/: __init__.py  domains.py  main.py  shape.py  solvers.py  visualisation.py
src/scicomp/cli/: __init__.py  version.py
src/scicomp/cli/animations/: __init__.py  create_wave_animation.py
src/scicomp/cli/plots/: __init__.py  eigenfrequency_spectrums_both.py  eigenfrequency_spectrums_by_length.py  eigenfrequency_spectrums_by_n.py  eigenmodes.py  laplacian.py  measure_relative_error_sparse_eigenvalues.py  measure_sparse_dense_eig_runtime.py  spring_energy.py  spring_phaseplot.py  (+1 more)
src/scicomp/eig_val_calc/: __init__.py  circle.py  matrix_imp.py  solvers.py
src/scicomp/model_elements/: domains.py  solving_wave_equation.py
src/scicomp/oscillator/: __init__.py  energy.py  leapfrog.py  runge_kutta.py
src/scicomp/utils/: __init__.py  logging_config.py  plot.py  verification.py
tests/: test.py  test_circle_domain.py  test_discretisation_validity.py  test_example.py  test_leapfrog.py  test_spring_energy.py
(+3 files in other folders)
